crux-llvm/test-data/golden/abd-test-file-32.pre-clang13.cvc5.good
[Crux] Found counterexample for verification goal
[Crux]   test-data/golden/abd-test-file-32.c:11:0: error: in main
[Crux]   crucible_assert
[Crux] 
[Crux]   One of the following 3 fact(s) would entail the goal
[Crux]   * (bvult x #b00000000000000000000000000000001)
[Crux]   * (bvult #b00000000000000000000000001100100 x)
[Crux]   * (= #b00000000000000000000000000000001 x)
[Crux] Overall status: Invalid.
